# model-inference-visualizer

./: .gitignore  AGENTS.md  MEMORY.md  README.md  TASKS.md  design-qa.md  model-inference-visualizer-desktop-particle-flow-agent-plan.md
collector/: README.md  pyproject.toml
collector/scripts/: collect_qwen35.py  compile_trace.py  validate_qwen35_trace.py
collector/src/inference_trace/: __init__.py  attention_projection.py  compiler.py  instrumentation.py  qwen_validation.py  summarize.py  writer.py
collector/tests/: test_attention_projection.py  test_compiler.py  test_instrumentation.py  test_qwen_validation.py  test_summarize.py  test_writer.py
docs/: ARCHITECTURE.md  INTERACTION_DESIGN.md  PROJECT_PLAN.md
docs/decisions/: 0001-recorded-trace-and-eager-observability.md  0002-fusion-boundaries-and-tp-projection.md  0003-derived-attention-from-real-qkv.md  0004-long-form-interactive-player.md  0005-durable-context-recovery.md  0006-separate-view-and-inference-cursor.md  0007-independent-camera-follow-during-playback.md  0008-natural-document-flow-for-chapters.md  0009-deterministic-desktop-global-flow.md
docs/project-context/: CHAT_TIMELINE.md  COMPACTION_RECOVERY.md  CONTEXT_MANIFEST.md  CURRENT_STATE.md  MASTER_PLAN.md  README.md  VISUAL_INTERACTION_CONTRACT.md
docs/reports/: 2026-07-10-p1-baseline.md  2026-07-10-p1-environment-audit.md  2026-07-10-p2-p4-trace-collection.md  2026-07-10-p4.1-quantization-and-tp-trace.md  (+8 more)
schemas/: trace-event-v1.schema.json
web/: .gitignore  .npmrc  AGENTS.md  package-lock.json  package.json  vite.config.ts
(+73 files in other folders)
