[project]
name = "inference-trace"
version = "0.1.0"
description = "Bounded trace collection for the model inference visualizer"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
